# bctppl

./: .gitattributes  .local.cfg.example  CMakeLists.txt  Dockerfile  README.md  align.cpp  analyze.ipynb  analyzeFirst.py  analyzeStream.py  analyzeTrack.py  analyzeTrack.sh  applySinogap.ipynb  ball.tif  ball_kernel.tif  bctppl.sh  commonsource.py  commonsource.sh  mask_eiger_grid.tif  pairShift.py  patchMe.py  ring.py  sinogapme.py  split.sh  stitch.sh  track.cpp  tracker.ipynb  trackme.py
models/: .bash_history_pwd
models/model2/: loadMe.py  model_gen16.pt  model_gen2.pt  model_gen4.pt  model_gen8.pt  sinogap_module.py
models/model3/: loadMe.py  sinogap.ipynb  sinogap_module.py
models/model4/: loadMe.py  sinogap_module.py
models/shiftpatch/: loadMe.py
models/shiftpatch_generic/: loadMe.py  shiftpatch.ipynb  shiftpatch_module.py
